--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,64 +1,199 @@
-<div class="card-columns">
-    <div class="card">
-      <img class="card-img-top" src="..." alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Card title that wraps to a new line</h5>
-        <p class="card-text">This is a longer card It's a broader card with text below as a natural lead-in to extra content. This content is a little longer. This content is a little bit longer.</p>
-      </div>
-    </div>
-    <div class="card p-3">
-      <blockquote class="blockquote mb-0 card-body">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-        <footer class="blockquote-footer">
-          <small class="text-muted">
-            Someone famous in <cite title="Source Title">Source Title</cite>
-          </small>
-        </footer>
-      </blockquote>
-    </div>
-    <div class="card">
-      <img class="card-img-top" src="..." alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
-    </div>
-    <div class="card bg-primary text-white text-center p-3">
-      <blockquote class="blockquote mb-0">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
-        <footer class="blockquote-footer">
-          <small>
-            Someone famous in <cite title="Source Title">Source Title</cite>
-          </small>
-        </footer>
-      </blockquote>
-    </div>
-    <div class="card text-center">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
-    </div>
-    <div class="card">
-      <img class="card-img" src="..." alt="Card image">
-    </div>
-    <div class="card p-3 text-right">
-      <blockquote class="blockquote mb-0">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-        <footer class="blockquote-footer">
-          <small class="text-muted">
-            Someone famous in <cite title="Source Title">Source Title</cite>
-          </small>
-        </footer>
-      </blockquote>
-    </div>
-    <div class="card">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">It's a broader card with text below as a natural lead-in to extra content. This content is a little longer.This card has even longer content than the first to show that equal height action.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
-    </div>
-  </div>
+<!-- <div class="card-columns">
+    <div class="card" style="width: auto; height: auto; padding: 0px; border-width: 0px; left: 0px; top: 0px;">
+        <app-carrousel></app-carrousel> -->
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-md-12" style="padding-left: 0px !important;padding-right: 0%!important;">
+                <app-carrousel  img class="d-block w-100" alt="Carousel Bootstrap First" style="padding-left: 0px !important;padding-right: 0%!important;" ></app-carrousel>
+                    <div class="carousel-caption">
+                      <h4>
+                        First Thumbnail label
+                      </h4>
+                      <p>
+                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                      </p>
+                    </div>
+              <div class="carousel slide" id="carousel-765893" style="margin-left: 0%!important;margin-right:0%!important;">
+            
+                 <div class="carousel-inner" style="padding-left: 0px !important;padding-right: 0%!important; ">
+                 
+                  <div class="carousel-item active"style="padding-left: 0px !important;padding-right: 0%!important; ">
+                      
+                   
+                
+                  </div>
+
+            
+
+
+                
+                </div> <a class="carousel-control-prev" href="#carousel-765893" data-slide="prev"><span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span></a> <a class="carousel-control-next" href="#carousel-765893" data-slide="next"><span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span></a>
+              </div>
+
+
+              <div class="row">
+                  <div class="col-md-3"style="height: 200px;width: 25%; background-color: #006993">    
+                      <a style=" font-size: 40px!important;  color: #FFFFFF;    display: inline-block;                    "id="Content-ser-socio" href="#!quiero-ser-socio.html" alt="CONÓZCANOS">
+                          <h4 style="font-weight: bold;font-family: 'MuseoSans300', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 40px!important;padding-left: 10%" >Nuestras<br>  Sucursales</h4>
+                  
+                      </a>
+              </div>
+                    <div class="col-md-3"style="height: 200px;width: 25%;background-color: #0ba3cd">    
+                        <a style=" font-size: 40px!important;  color: #FFFFFF;    display: inline-block;                    "id="Content-ser-socio" href="#!quiero-ser-socio.html" alt="CONÓZCANOS">
+                            <h4 style="font-weight: bold;font-family: 'MuseoSans300', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 40px!important;" >Gestión<br>  Online</h4> 
+                    
+                        </a>
+                </div>
+                <div class="col-md-3" style="height: 200px;width: 25%;background-color: #01C8FF">
+                    <a style=" font-size: 40px!important;  color: #FFFFFF;    display: inline-block;                    "id="Content-ser-socio" href="#!quiero-ser-socio.html" alt="CONÓZCANOS">
+                        <h4 style="font-weight: bold;font-family: 'MuseoSans300', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 40px!important;" >+<br> Información</h4> 
+                
+                    </a>
+                  
+                </div>
+                <div class="col-md-3" style="height: 200px!important;width: 25%;background-color: rgba(0, 228, 255, 1)">    
+                    
+                  <a style=" font-size: 40px!important;  color: #FFFFFF;    display: inline-block;                    "id="Content-ser-socio" href="#!quiero-ser-socio.html" alt="CONÓZCANOS">
+                        <h4 style="font-weight: bold;font-family: 'MuseoSans300', 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: 40px!important;" >Quiero <br> ser Socio</h4> 
+                
+                    </a>
+                </div>
+              </div>
+              <div class="jumbotron">
+
+                <div class="col-md-12 ">
+									<div style="background:#f9f9f9; border-top:1px solid #eaeaea; height:80px;" class="textoNumeros">
+					<span>0810-444-7700</span> INFORMACIÓN 24 HS.
+            
+										<span class="margen_de_cada_lado"> | </span>
+  						<span class="texto_rojo">0800-777-7800 / (011) 4344-1500</span>
+  						<span class="texto_rojo_normal"> EMERGENCIAS</span>
+						
+                           
+										   <span class="margen_de_cada_lado"> | </span>
+						   <span>0810-333-8876 </span>
+						TURNOS
+						<span class="margen_de_cada_lado"> | </span> <span>0810-333-2244 </span>VENTAS
+						
+           					</div>
+								</div>
+              </div>
+              <!-- <div class="jumbotron">
+                     
+
+
+              </div> -->
+              <div class="carousel slide" id="carousel-442702">
+                <ol class="carousel-indicators">
+                  <li data-slide-to="0" data-target="#carousel-442702" class="active">
+                  </li>
+                  <li data-slide-to="1" data-target="#carousel-442702">
+                  </li>
+                  <li data-slide-to="2" data-target="#carousel-442702">
+                  </li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" alt="Carousel Bootstrap First" src="http://www.osde.com.ar/data/imgs/fumadoresv2.jpg" />
+                    <div class="carousel-caption">
+                      <h4>
+                        First Thumbnail label
+                      </h4>
+                      <p>
+                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                      </p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" alt="Carousel Bootstrap Second" src="https://www.layoutit.com/img/sports-q-c-1600-500-2.jpg" />
+                    <div class="carousel-caption">
+                      <h4>
+                        Second Thumbnail label
+                      </h4>
+                      <p>
+                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                      </p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" alt="Carousel Bootstrap Third" src="https://www.layoutit.com/img/sports-q-c-1600-500-3.jpg" />
+                    <div class="carousel-caption">
+                      <h4>
+                        Third Thumbnail label
+                      </h4>
+                      <p>
+                        Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                      </p>
+                    </div>
+                  </div>
+                </div> <a class="carousel-control-prev" href="#carousel-442702" data-slide="prev"><span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span></a> <a class="carousel-control-next" href="#carousel-442702" data-slide="next"><span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span></a>
+              </div>
+            </div>
+          </div>
+          <div class="row" style="    padding-top: 10px;padding-bottom: 10px;
+          ">
+            <div class="col-md-3" style=" background-image: url(data/imgs/tramitesonline.jpg) center center no-repeat;
+            background-size: cover !important;">
+           <img alt="Bootstrap Image Preview" style="height:100%;width: 100% !important;" src="http://www.osde.com.ar/data/imgs/activar-la-credencial.jpg" />
+           <div class="content" >
+              <h1 class="text">Consultorios</h1>
+           </div>
+            </div>
+            <div class="col-md-3">
+                <img alt="Bootstrap Image Preview" style="height:100%;width: 100% !important;" src="http://www.osde.com.ar/data/imgs/tramitesonline.jpg" />
+                <div class="content" >
+                    <h1 class="text">Consultorios</h1>
+                 </div>
+            </div>
+            <div class="col-md-3">
+                <img alt="Bootstrap Image Preview" style="height:100%;width: 100% !important;" src="https://blog.klikin.com/wp-content/uploads/2018/09/TURNOS_TRABAJO.jpg" />
+                <div class="content" >
+                    <h1 class="text">Consultorios</h1>
+                 </div>
+            </div>
+            <div  class="col-md-3 ">
+                      <img alt="Bootstrap Image Preview" style="height:100%;width: 100% !important;" src="https://greencservices.com/wp-content/uploads/2018/03/AdobeStock_114901066.jpeg" />
+
+                      <div class="content" >
+                           <h1 class="text">Consultorios</h1>
+                        </div>
+          </div>
+          </div>
+          <div class="jumbotron" style="  background: #124465;">
+              <footer class="liquidWrapper">
+                  <div class="container" style="    display: flex;">
+                    <div class="col-xs-3 footer-brand boxsizingFooter">
+                      <a class="boxsizingFooter" href="#"><img src="../img/logo_w.svg" height="35px"></a>
+                    </div>
+                    <div class="boxsizingFooter" style="position: relative; height: 100%;">
+                      <div class="boxsizingFooter col-xs-2 col-xs-offset-1 " style="  box-sizing: border-box;   margin-left: 7.33333333%;
+                      ">
+                        <h5>SOBRE OSDE</h5>
+                        <ul class="">
+                          <li><a href="#!conozca-osde.html">Conocé OSDE</a></li>
+                          <li><a href="#!trabajar-en-osde.html">Quiero trabajar en OSDE</a></li>
+                          <li><a href="http://www.binariaseguros.com.ar/bifurcador.asp">Binaria Seguros</a></li>
+                          <li><a href="http://www.interturis.com.ar/">Interturis</a></li>
+                          <li><a href="http://www.urg.com.ar">URG Urgencias</a></li>
+                          <li><a href="http://www.fundacionosde.com.ar/">Fundación OSDE</a></li>
+                        </ul>
+                      </div>
+                    
+                     
+                      <div class="footerInf liquidWrapper">
+                        <div class="legales">
+                          <p>©OSDE 2015 - Todos los derechos reservados - Av. Leandro N. Alem 1067 - Piso 9 - C1001AAF - Buenos Aires - 0800 555 OSDE (6733)<br>Superintendencia de Servicios de Salud - Órgano de Control de Obras Sociales y Entidades de Medicina Prepaga - 0800-222-SALUD (72583) - <a href="http://www.sssalud.gob.ar" target="_blank" class="link_footer" style="font-size: 9px;">www.sssalud.gob.ar</a> - R.N.E.M.P. (Prov.) 1408 - R.N.O.S. 4-0080-0<br></p>
+                        </div>
+                        <div id="logotipos">
+                          <div class="pdp"><a target="_blank" href="http://ssl.comodo.com/"></a></div>
+                          <div class="certisur"><a href="#!osde-direccion-nacional-de-datos-personales.html"></a></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </footer>
+
+            </div>
+
+
+        </div>
