--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -36,4 +36,80 @@
       font-size: 20px;
     }
   }
+
+//footer
+  #footer #brand {
+    background: #124465;
+}
+
+#brand footer .container {
+  height: 225px;
+}
+#brand .footer-brand {
+  vertical-align: middle;
+  text-align: center;
+  border-right: solid #FFFFFF 1px;
+  display: block;
+  height: 100%;
+  padding: 94px 5%;
+}
+
+#footer #brand .col-xs-offset-1 {
+  margin-left: 7.33333333%;
+}
+
+#footer #brand .col-xs-2 {
+  width: 17.66666667%;
+}
+
+// row de imagenes hover
+.col-md-3 {
+  padding-right: 0px;
+  padding-left: 0px;
+  flex: 0 0 25%;
+  max-width: 25%;
+}
+.col-md-12 {
+  padding-right: 0px;
+  padding-left: 0px;
+  flex: 0 0 25%;
+  max-width: 25%;
+}
+
+}// fin user
+.content {
+  position: absolute;
+    bottom: 0;
+      background: rgba(0, 0, 0, 0);
+    // color: #f1f1f1;
+    height:100%;
+    width: 93% !important;
+    padding: 20px;
+ 
+ }
+ .text{
+   font-size: 0%;
+ }
+
+ //hover efecto opaco esconder ulimo row  4 imagenes
+
+ .content:hover .text 
+{
+  // color: white;
+  color:rgba(0, 228, 255, 1);
+  font-size: 40px;
+  padding-top: 15%;
+  // padding-left: 50%;
+  // transform: translate(-50%, -50%);
+  // -ms-transform: translate(-50%, -50%)
+
+}
+.content:hover  {
+// opacity: 1;
+// top: 50%;
+// left: 50%;
+    font-size: 16px;
+ 
+    background: rgba(0, 0, 0, 0.5);
+
 }
